--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "lesson",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Gospodar91.github.io/goit-react-hw-03-03.v2",
+
+  "homepage": "https://Gospodar91.github.iogoit-react-hw-04-01",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
