--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
 
-  "homepage": "https://Gospodar91.github.iogoit-react-hw-04-01",
+  "homepage": "https://Gospodar91.github.io/goit-react-hw-04-01",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
